Mon Jul 11 23:50:39 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* time.c: can't compile time.c on AIX due to missing declaration for
	  ffs(). It is declared in strings.h on AIX. backported r32518 from
	  trunk.

Mon Jul 11 23:47:00 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* thread_pthread.c (get_stack):  need to adjust stack addr for
          [Bug #1813] on AIX. backported r32511 from trunk.

Mon Jul 11 15:17:03 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (rb_num2ull): use FIX2LONG instead of FIX2ULONG. see
	  rb_num2ulong(). fixed the problem of ObjectSpace._id2ref of IL32LLP64
	  platforms, introduced at r32433.
	  backported r32512 from trunk.

Sun Jul 10 23:58:55 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* version.h: 1.9.3 is no longer trunk.

Sun Jul 10 23:24:29 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* class.c (rb_mix_module): reverted r31873.
	  (check_mix_method_i, do_mix_method_i) reverted r31917.

	* test/ruby/test_module.rb (TestModule#test_mix_const): reverted
	  r31918.

Sun Jul 10 22:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (rmpd_power_by_big_decimal): fix
	  precision treatment errors.

	* test/bigdecimal/test_bigdecimal.rb: add tests for the above change.
	  fix precision treatment errors.

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): precision argument
	  should be optional for its compatibility.

Sun Jul 10 22:38:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (var_ref): distinguish vcall from local variable
	  references.  based on a patch by Michael Edgar michael.j.edgar
	  AT dartmouth.edu.  Bug #5002

Sun Jul 10 21:51:29 2011  Koichi Sasada  <ko1@atdot.net>

	* internal.h: add comments (cautions).

Sun Jul 10 20:59:38 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Add new class variable `@@testfile_prefix`.
	  This is for changing test name prefix. (For testing)

	* test/testunit/tests_for_parallel/ptest_first.rb: Renamed from