@@ -1,3 +1,9 @@
+Wed Jul 13 08:20:08 2011  Shota Fukumori  <sorah@tubusu.net>
+
+	* lib/test/unit.rb(Test::Unit::Options#process_args): Fix bug.
+	  Fix process_args didn't return `@option` after r30939. Backported
+	  r32526 from trunk.
+
 Mon Jul 11 23:50:39 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>
 
 	* time.c: can't compile time.c on AIX due to missing declaration for
